fixed resizing issue making header and title misalign

--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,19 @@ body {
    margin: 0;
 }
 
+#page-wrap {
+    max-width: 1100px;
+    margin: 0 auto;
+    text-align: left;
+}
+
 .header {
     display: flex;
     color: white;
     background-color: #1F2937;
     font-weight: bolder;
     font-size: 40px;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -32,11 +38,9 @@ a {
 .hero-container {
     background-color: #1F2937;
     display: flex;
-    padding-top: 100px;
     justify-content: space-around;
-    padding-bottom: 100px;
     align-items: center;
-    padding: 80px 220px;
+    padding: 80px 0px;
     gap: 70px;
     
 }
@@ -79,4 +83,8 @@ h2 {
     display: flex;
     padding: 10px 20px;
     font-weight: bold;
+}
+
+.container{
+    background-color: #1F2937;
 }
